<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:background="@color/white">


    <TextView
        android:id="@+id/bmi_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmiValue"
        android:textColor="@color/app_color"
        android:textSize="100sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/bmi_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:textColor="@color/app_color"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi_value" />

    <TextView
        android:id="@+id/bmi_tips"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/bmiTips"
        android:textAlignment="center"
        android:textColor="@color/app_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi_category" />

    <Button
        android:id="@+id/calculate_again_btn"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_design"
        android:text="@string/go_back"
        android:textColor="@color/text_color"
        android:textSize="18sp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi_tips" />

    <TextView
        android:id="@+id/tvNormalWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normal_weight"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate_again_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>