<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMICalculator"
    android:background="@color/white">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/title_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/app_color"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weight_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight_title_txt"
        android:textColor="@color/app_color"
        android:textSize="15sp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/weight_cardView"
        app:layout_constraintStart_toStartOf="@+id/weight_cardView" />

    <TextView
        android:id="@+id/tvKG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kgs"

        android:textColor="@color/app_color"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/weight_title_text"
        app:layout_constraintEnd_toStartOf="@+id/tvLBS"
        app:layout_constraintTop_toTopOf="@+id/weight_title_text" />

    <TextView
        android:id="@+id/tvLBS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbs"
        android:textColor="@color/dark_grey"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvKG"
        app:layout_constraintEnd_toEndOf="@+id/weight_cardView"
        app:layout_constraintTop_toTopOf="@+id/tvKG" />


    <androidx.cardview.widget.CardView
        android:id="@+id/weight_cardView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="76dp"
        android:background="@color/bg_layer_2"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/app_color">

            <TextView
                android:id="@+id/weight_counter_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_counter_txt"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="60sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/weight_btn_inc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    app:backgroundTint="@color/white"
                    app:maxImageSize="35dp"
                    app:srcCompat="@drawable/ic_add"

                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="128dp" />

                <View
                    android:layout_width="20dp"
                    android:layout_height="0dp" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/weight_btn_dec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/white"
                    app:maxImageSize="35dp"
                    app:srcCompat="@drawable/ic_remove"
                    tools:layout_editor_absoluteX="120dp"
                    tools:layout_editor_absoluteY="128dp" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/age_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age_title_txt"
        android:textColor="@color/app_color"
        android:textSize="15sp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/age_cardView"
        app:layout_constraintEnd_toEndOf="@+id/age_cardView"
        app:layout_constraintStart_toStartOf="@+id/age_cardView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/age_cardView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="12dp"
        android:background="@color/bg_layer_2"
        android:visibility="visible"
        app:cardCornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/app_color">

            <TextView
                android:id="@+id/age_counter_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/age_counter_txt"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="60sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.505"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/age_btn_inc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    app:backgroundTint="@color/white"
                    app:maxImageSize="35dp"
                    app:srcCompat="@drawable/ic_add"
                    tools:layout_editor_absoluteX="32dp"
                    tools:layout_editor_absoluteY="128dp" />

                <View
                    android:layout_width="20dp"
                    android:layout_height="0dp" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/age_btn_dec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/white"
                    app:maxImageSize="35dp"
                    app:srcCompat="@drawable/ic_remove"
                    tools:layout_editor_absoluteX="120dp"
                    tools:layout_editor_absoluteY="128dp" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/height"
        android:textColor="@color/app_color"
        android:textSize="15sp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="@+id/height_cardView"
        app:layout_constraintTop_toBottomOf="@+id/weight_cardView" />

    <TextView
        android:id="@+id/tvCM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CM"
        android:layout_marginEnd="10dp"
        android:textColor="@color/app_color"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/tvFeet"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/tvFeet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feet"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvCM"
        app:layout_constraintEnd_toEndOf="@+id/height_cardView"
        app:layout_constraintTop_toTopOf="@+id/tvCM" />

    <androidx.cardview.widget.CardView
        android:id="@+id/height_cardView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/bg_layer_2"
        app:cardCornerRadius="22dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/app_color">

            <TextView
                android:id="@+id/height_counter_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height_counter_txt"
                android:textAlignment="center"
                android:textColor="@color/text_color"
                android:textSize="60sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/calculate_btn"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_design"
        android:text="@string/calculate_your_bmi"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/height_cardView" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>